--- a/myapp/views/index.hbs
+++ b/myapp/views/index.hbs
@@ -29,7 +29,7 @@
             font-weight: <weight>;
             font-style: normal;
         }
-        
+
 
         /* Ensure mobile nav links are styled and visible */
         #mobileNav {
@@ -214,16 +214,16 @@
                 <div class="absolute inset-0 bg-black opacity-50"></div>
                 <div class="relative z-10 flex items-center justify-center h-full px-4 py-32 lg:px-8">
                     <div class="text-center" id="txt">
-                        <h1 class="mb-4 text-5xl tracking-tight font-extrabold text-center text-white " id="typewriter">
-                            <span class="sm:block"></span>
+                        <h1 class="mb-4 text-3xl sm:text-4xl md:text-5xl tracking-tight font-extrabold text-center text-white"
+                            id="typewriter"> <span class="sm:block"></span>
                         </h1>
-                        <p class="mx-auto mt-4 max-w-2xl sm:text-2xl fade-in-empowering" id="empowering-text">
+                        <p class="mx-auto mt-4 max-w-2xl sm:text-xl fade-in-empowering" id="empowering-text">
                             Empowering IT professionals and enthusiasts through knowledge sharing, events, and
                             networking.
                         </p>
                         <div class="mt-8 flex flex-wrap justify-center gap-4 fade-in-empowering" id="dive-button">
                             <a class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow"
-                                href="#sec">
+                                href="#next">
                                 Dive In!
                             </a>
                         </div>
@@ -233,115 +233,108 @@
             </div>
         </section>
 
-        
-            
-            <div class="relative">
-                <div
-                    class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 to-blue-200">
-                    <div class="flex flex-wrap">
-                        <div class="w-full sm:w-8/12 mb-10">
-                            <div class="container mx-auto h-full sm:p-10">
-                                <nav class="flex px-4 justify-between items-center">
-                                    <div class="text-4xl font-bold">
-                                        Workshops & Seminars<span class="text-green-700">.</span>
-                                    </div>
-                                    <div>
-                                        <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt=""
-                                            class="w-8">
-                                    </div>
-                                </nav>
-                                <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
-                                    <div class="w-full">
-                                        <h1 class="text-4xl lg:text-6xl font-bold">Elevate Your <span
-                                                class="text-green-700">Skills</span> with Our Workshops</h1>
-                                        <div class="w-20 h-2 bg-green-700 my-4"></div>
-                                        <p class="text-xl mb-10">Participate in our regular workshops and seminars to
-                                            stay ahead in the IT world. Dive into the latest trends and technologies to
-                                            enhance your expertise and career.</p>
-                                        <a href="/events"
-                                            class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Discover
-                                            Workshops</a>
-                                    </div>
-                                </header>
-                            </div>
-                        </div>
-                        <img src="https://images.unsplash.com/photo-1536147116438-62679a5e01f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                            alt="Leafs" class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
-                    </div>
-                </div>
-                <div
-                    class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-900 text-white">
-                    <div class="flex flex-wrap">
-                        <img src="https://images.unsplash.com/photo-1536147116438-62679a5e01f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                            alt="Leafs" class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
-                        <div class="w-full sm:w-8/12 mb-10">
-                            <div class="container mx-auto h-full sm:p-10">
-                                <nav class="flex px-4 justify-between items-center">
-                                    <div class="text-4xl font-bold">
-                                        Networking Events<span class="text-green-700">.</span>
-                                    </div>
-                                    <div>
-                                        <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt=""
-                                            class="w-8">
-                                    </div>
-                                </nav>
-                                <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
-                                    <div class="w-full">
-                                        <h1 class="text-4xl lg:text-6xl font-bold">Connect at Our <span
-                                                class="text-green-700">Networking Events</span></h1>
-                                        <div class="w-20 h-2 bg-green-700 my-4"></div>
-                                        <p class="text-xl mb-10">Join our networking events to meet IT professionals
-                                            across various sectors. Forge valuable connections and collaborate on
-                                            exciting projects.</p>
-                                        <a href="/events"
-                                            class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Explore
-                                            Events</a>
-                                    </div>
-                                </header>
-                            </div>
-                        </div>
 
-                    </div>
-                </div>
-                <div
-                    class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 text-white">
-                    <div class="flex flex-wrap">
-                        <div class="w-full sm:w-8/12 mb-10">
-                            <div class="container mx-auto h-full sm:p-10">
-                                <nav class="flex px-4 justify-between items-center">
-                                    <div class="text-4xl font-bold">
-                                        Competitions<span class="text-green-700">.</span>
-                                    </div>
-                                    <div>
-                                        <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt=""
-                                            class="w-8">
-                                    </div>
-                                </nav>
-                                <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
-                                    <div class="w-full">
-                                        <h1 class="text-4xl lg:text-6xl font-bold">Showcase Your <span
-                                                class="text-green-700">Talent</span> in Competitions</h1>
-                                        <div class="w-20 h-2 bg-green-700 my-4"></div>
-                                        <p class="text-xl mb-10">Participate in thrilling competitions that challenge
-                                            your skills and creativity. From hackathons to coding contests, prove your
-                                            prowess and earn recognition.</p>
-                                        <a href="/events"
-                                            class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Join
-                                            Competitions</a>
-                                    </div>
-                                </header>
-                            </div>
+
+        <div class="relative">
+            <div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 to-blue-200" id="next">
+                <div class="flex flex-wrap">
+                    <div class="w-full sm:w-8/12 mb-10">
+                        <div class="container mx-auto h-full sm:p-10">
+                            <nav class="flex px-4 justify-between items-center">
+                                <div class="text-4xl font-bold">
+                                    Workshops & Seminars<span class="text-green-700">.</span>
+                                </div>
+                                <div>
+                                    <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt="" class="w-8">
+                                </div>
+                            </nav>
+                            <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
+                                <div class="w-full">
+                                    <h1 class="text-4xl lg:text-5xl font-bold">Elevate Your <span
+                                            class="text-green-700">Skills</span> with Our Workshops</h1>
+                                    <div class="w-20 h-2 bg-green-700 my-4"></div>
+                                    <p class="text-xl mb-10">Participate in our regular workshops and seminars to
+                                        stay ahead in the IT world. Dive into the latest trends and technologies to
+                                        enhance your expertise and career.</p>
+                                    <a href="/events"
+                                        class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Discover
+                                        Workshops</a>
+                                </div>
+                            </header>
                         </div>
-                        <img src="https://images.unsplash.com/photo-1536147116438-62679a5e01f2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-                            alt="Leafs" class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
                     </div>
+                    <img src="/images/workshop.jpeg" alt="Leafs" class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
                 </div>
             </div>
-        
+            <div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-900 text-white">
+                <div class="flex flex-wrap">
+                    <img src="/images/networking.jpg" alt="Leafs"
+                        class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
+                    <div class="w-full sm:w-8/12 mb-10">
+                        <div class="container mx-auto h-full sm:p-10">
+                            <nav class="flex px-4 justify-between items-center">
+                                <div class="text-4xl font-bold">
+                                    Networking Events<span class="text-green-700">.</span>
+                                </div>
+                                <div>
+                                    <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt="" class="w-8">
+                                </div>
+                            </nav>
+                            <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
+                                <div class="w-full">
+                                    <h1 class="text-4xl lg:text-5xl font-bold">Connect at Our <span
+                                            class="text-green-700">Networking Events</span></h1>
+                                    <div class="w-20 h-2 bg-green-700 my-4"></div>
+                                    <p class="text-xl mb-10">Join our networking events to meet IT professionals
+                                        across various sectors. Forge valuable connections and collaborate on
+                                        exciting projects.</p>
+                                    <a href="/events"
+                                        class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Explore
+                                        Events</a>
+                                </div>
+                            </header>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="sticky top-0 h-screen flex flex-col items-center justify-center bg-gray-800 text-white">
+                <div class="flex flex-wrap">
+                    <div class="w-full sm:w-8/12 mb-10">
+                        <div class="container mx-auto h-full sm:p-10">
+                            <nav class="flex px-4 justify-between items-center">
+                                <div class="text-4xl font-bold">
+                                    Competitions<span class="text-green-700">.</span>
+                                </div>
+                                <div>
+                                    <img src="https://image.flaticon.com/icons/svg/497/497348.svg" alt="" class="w-8">
+                                </div>
+                            </nav>
+                            <header class="container px-4 lg:flex mt-10 items-center h-full lg:mt-0">
+                                <div class="w-full">
+                                    <h1 class="text-3xl lg:text-5xl font-bold">Showcase Your <span
+                                            class="text-green-700">Talent</span> in Competitions</h1>
+                                    <div class="w-20 h-2 bg-green-700 my-4"></div>
+                                    <p class="text-xl mb-10">Participate in thrilling competitions that challenge
+                                        your skills and creativity. From hackathons to coding contests, prove your
+                                        prowess and earn recognition.</p>
+                                    <a href="/events"
+                                        class="bg-green-500 text-white text-2xl font-medium px-4 py-2 rounded shadow">Join
+                                        Competitions</a>
+                                </div>
+                            </header>
+                        </div>
+                    </div>
+                    <img src="/images/competitions.jpg" alt="Leafs"
+                        class="w-full h-48 object-cover sm:h-screen sm:w-4/12">
+                </div>
+            </div>
+        </div>
+
         <div class=" bg-gray-900 pt-9">
             <div class="mx-auto w-full max-w-[1166px] px-4 xl:px-0">
                 <div class="flex flex-col justify-between sm:px-[18px] md:flex-row md:px-10">
-                    <div class="md:w-[316px] ml-20">
+                    <div class="md:w-[316px] lg:ml-20">
                         <p class="text-[18px] font-medium text-white">
                         <h1 class="text-green-500 font-extrabold">
                             <span class="text-white">init</span>()<br><span class="text-white">ASSOCIATION</span>
@@ -359,7 +352,7 @@
                                 class="text-white hover:text-gray-400">LinkedIn <i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
-                    <div class="md:w-[316px] ml-20">
+                    <div class="md:w-[316px] lg:ml-20">
                         <div class="mt-[23px] flex">
                             <div class="flex h-[38px] w-[38px] items-center justify-center rounded-[75%]">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -410,7 +403,7 @@
                     </div>
                     <div
                         class="mt-6 flex w-full flex-col justify-between text-white sm:flex-row md:mt-0 md:max-w-[341px] ml-15">
-                        <div class="ml-20">
+                        <div class="lg:ml-20">
                             <p class="text-deutziawhite font-inter text-[18px] font-medium leading-normal">Pages</p>
                             <ul>
                                 <li class="mt-[15px]"><a
